7/16/2001
	- Converting a AAAA record to wire format was broken.
	  (David Blacka)
	- Inet6Address did not properly reject addresses that are too
	  long or too short, and also didn't properly handle addresses
	  with one number after a double colon.
	- Key footprints were computed incorrectly.  Also cache footprints
	  in the KEYRecord to avoid recomputation. (David Blacka)

7/13/2001
	- KEY flags were incorrect (David Blacka <davidb@research.netsol.com>)
	- Add routines for parsing a master file from a non-file input
	  source (David Blacka)
	- base64.formatString() didn't work if lineLength wasn't 64.
	  (David Blacka)
	- Add support for the DNSSEC OK extended flag (David Blacka)
	- Allow the caller of a Resolver to add an OPT record to a query.
	  (original patch from David Blacka).

5/23/2001
	- Automatically determining name servers didn't work on Windows 2000.

4/13/2001
	- Converting a Name to a String does proper character escaping.

4/7/2001
	- 1.2.0 released

3/21/2001
	- Only cache relevant data from answers.
	- Cache negative responses more correctly.

3/14/2001
	- Handle TTLs greater than 2^31.

3/10/2001
	- Performance and memory improvements to the Name object.

3/7/2001
	- Performance improvements to TypeMap (used by Zone and Cache).

3/6/2001
	- Lots of standards compliance related fixes.

3/4/2001
	- Improved class handling.
	- A few minor CNAME related fixes.

2/27/2001
	- Referrals weren't returned correctly from jnamed.

1/15/2001
	- Fix some signed/unsigned printing issues for KEY records
	  (Pasi Eronen <pe@iki.fi>)
	- Add routines to generate SIG(0) message signatures
	  (Pasi Eronen <pe@iki.fi>)

1/8/2001
	- Add support for unknown RR types & classes.

12/3/2000
	- The target in an MX record can be compressed.

11/18/2000
	- Add jnamed.conf example to USAGE

8/27/2000
	- 1.1.6 released
	- The high level api wasn't properly initialized.
	  (Christopher Fitch <cfitch@sbti.com>)
	- Added a routine to build a SIG record based on the results of